Clear some lint issues